[gd_scene load_steps=12 format=2]

[ext_resource path="res://levels/level1/Level1.gd" type="Script" id=1]
[ext_resource path="res://user_interface/GUI.tscn" type="PackedScene" id=2]
[ext_resource path="res://menus/pause/PauseMenu.tscn" type="PackedScene" id=3]
[ext_resource path="res://environment/clouds.png" type="Texture" id=4]
[ext_resource path="res://environment/town.png" type="Texture" id=5]
[ext_resource path="res://environment/environment_tileset.tres" type="TileSet" id=6]
[ext_resource path="res://entities/player/Player.tscn" type="PackedScene" id=7]
[ext_resource path="res://entities/enemies/hell_hound/HellHound.tscn" type="PackedScene" id=8]
[ext_resource path="res://entities/enemies/zorgoth/Zorgoth.tscn" type="PackedScene" id=9]
[ext_resource path="res://levels/res/LevelEnd.tscn" type="PackedScene" id=10]
[ext_resource path="res://levels/res/sound/game_over.wav" type="AudioStream" id=11]

[node name="Level1" type="Node2D" groups=[
"save",
]]
script = ExtResource( 1 )

[node name="UserInterface" type="CanvasLayer" parent="."]
editor/display_folded = true

[node name="GUI" parent="UserInterface" instance=ExtResource( 2 )]

[node name="Pause" type="CanvasLayer" parent="."]
editor/display_folded = true
layer = 100

[node name="PauseMenu" parent="Pause" instance=ExtResource( 3 )]
visible = false

[node name="Background" type="Node2D" parent="."]
editor/display_folded = true

[node name="ParallaxBackground" type="ParallaxBackground" parent="Background"]
editor/display_folded = true
scroll_base_scale = Vector2( 0.5, 0.5 )

[node name="Clouds" type="ParallaxLayer" parent="Background/ParallaxBackground"]
motion_mirroring = Vector2( 252, 0 )

[node name="Sprite" type="Sprite" parent="Background/ParallaxBackground/Clouds"]
scale = Vector2( 1, 0.818182 )
texture = ExtResource( 4 )
centered = false

[node name="Town" type="ParallaxLayer" parent="Background/ParallaxBackground"]
motion_mirroring = Vector2( 252, 0 )

[node name="Sprite" type="Sprite" parent="Background/ParallaxBackground/Town"]
scale = Vector2( 1, 0.818182 )
texture = ExtResource( 5 )
centered = false

[node name="TileMap" type="TileMap" parent="Background"]
scale = Vector2( 0.5, 0.5 )
tile_set = ExtResource( 6 )
cell_size = Vector2( 8, 8 )
collision_layer = 4
collision_mask = 0
format = 1
tile_data = PoolIntArray( 917504, 37, 0, 1376533, 32, 0, 1376537, 27, 0, 1376543, 36, 0, 1507388, 27, 0, 1507394, 33, 0, 1507601, 32, 0, 1638470, 33, 0, 1638595, 34, 0, 1638599, 34, 0, 1638603, 34, 0, 1638607, 27, 0, 1638613, 27, 0, 1638619, 27, 0, 1638625, 27, 0, 1638631, 27, 0, 1638643, 27, 0, 1638649, 27, 0, 1638655, 27, 0, 1638661, 27, 0, 1703936, 36, 0, 1703990, 27, 0, 1769546, 33, 0, 1769651, 34, 0, 1769655, 34, 0, 1769659, 34, 0, 1769759, 36, 0, 1900592, 27, 0, 1900622, 27, 0, 1900628, 27, 0, 1900634, 27, 0, 1900646, 27, 0, 1900652, 27, 0, 1900658, 27, 0, 1900664, 27, 0, 1900676, 27, 0, 1900682, 27, 0, 1900688, 27, 0, 1900694, 27, 0, 1900705, 34, 0, 1900709, 34, 0, 1900713, 34, 0, 2097152, 27, 0, 2097158, 27, 0, 2097164, 27, 0, 2097170, 27, 0, 2097176, 27, 0, 2097182, 27, 0, 2097188, 27, 0, 2097194, 27, 0, 2162972, 27, 0, 2162978, 27, 0, 2162984, 27, 0, 2162990, 27, 0, 2162996, 27, 0, 2163002, 27, 0, 2163008, 27, 0, 2163014, 27, 0, 2163020, 27, 0, 2163026, 27, 0, 2163032, 27, 0, 2163038, 27, 0, 2163044, 27, 0, 2163050, 27, 0, 2163056, 27, 0, 2163062, 27, 0, 2163068, 27, 0 )

[node name="Level" type="Node2D" parent="."]

[node name="Player" parent="Level" instance=ExtResource( 7 )]
position = Vector2( 31, 115 )
scale = Vector2( 0.5, 0.5 )
speed = 60

[node name="HellHound" parent="Level" instance=ExtResource( 8 )]
position = Vector2( 464.104, 106.572 )
scale = Vector2( 0.5, 0.5 )
speed = 30
player_nodepath = NodePath("../Player")

[node name="HellHound2" parent="Level" instance=ExtResource( 8 )]
position = Vector2( 612.02, 107.252 )
scale = Vector2( 0.5, 0.5 )
speed = 30
player_nodepath = NodePath("../Player")

[node name="HellHound3" parent="Level" instance=ExtResource( 8 )]
position = Vector2( 923.37, 91.7766 )
scale = Vector2( 0.5, 0.5 )
speed = 30
player_nodepath = NodePath("../Player")

[node name="HellHound4" parent="Level" instance=ExtResource( 8 )]
position = Vector2( 1043.64, 91.2777 )
scale = Vector2( 0.5, 0.5 )
speed = 30
player_nodepath = NodePath("../Player")

[node name="Zorgoth" parent="Level" instance=ExtResource( 9 )]
position = Vector2( 1397.85, 102.156 )
scale = Vector2( 0.5, 0.5 )
health = 999
damage = 5
player_nodepath = NodePath("../Player")

[node name="LevelEnd" parent="Level" instance=ExtResource( 10 )]
visible = false
position = Vector2( 1516, 111 )
scale = Vector2( 0.5, 0.5 )

[node name="GameOverSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 11 )

[node name="Timer" type="Timer" parent="."]
one_shot = true
[connection signal="died" from="Level/Player" to="." method="_on_Player_died"]
[connection signal="exp_changed" from="Level/Player" to="UserInterface/GUI" method="_on_Player_exp_changed"]
[connection signal="health_changed" from="Level/Player" to="UserInterface/GUI" method="_on_Player_health_changed"]
[connection signal="screen_entered" from="Level/Zorgoth" to="." method="_on_Zorgoth_screen_entered"]
[connection signal="screen_exited" from="Level/Zorgoth" to="." method="_on_Zorgoth_screen_exited"]
[connection signal="level_complete" from="Level/LevelEnd" to="." method="_on_LevelEnd_level_complete"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
